[gd_scene load_steps=3 format=3 uid="uid://cg8vl5nh3k2fy"]

[ext_resource type="Script" path="res://scripts/ui/FinalVictoryScreen.gd" id="1_fvs"]
[ext_resource type="Resource" uid="uid://dtfg2ntfkn5oa" path="res://styles/HUDStyle.tres" id="2_style"]

[node name="FinalVictoryScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_fvs")
style = ExtResource("2_style")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Background" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.8)

[node name="Content" type="VBoxContainer" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="VictoryLabel" type="Label" parent="Root/Content"]
unique_name_in_owner = true
layout_mode = 2
text = "VICTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="Root/Content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="DiceRangeLabel" type="Label" parent="Root/Content"]
unique_name_in_owner = true
layout_mode = 2
text = "10-10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="Root/Content"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Root/Content"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PlayAgainButton" type="Button" parent="Root/Content/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="Root/Content/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Main Menu"
